# ApiKeyManager

./: .gitignore  README.md  WhyThisProject.md  migration_report_live_1772170492635.json  package-lock.json  package.json  tsconfig.json
gateway/: config.ts  middleware.ts  proxy.ts  server.ts
python-sdk/: README.md  demo.py  pyproject.toml  test_script.py
python-sdk/splashcodex_api_manager/: __init__.py  __main__.py
python-sdk/splashcodex_api_manager/core/: manager.py  strategies.py  types.py
python-sdk/splashcodex_api_manager/persistence/: __init__.py  base.py  file.py  memory.py
python-sdk/splashcodex_api_manager/presets/: __init__.py  base.py  gemini.py  multi.py  openai.py
python-sdk/tests/: test_manager.py  test_presets.py
scripts/: migrate.ts
src/: index.ts
src/env/: index.ts  loader.ts
src/persistence/: file.ts  index.ts  memory.ts
src/presets/: anthropic.ts  base.ts  gemini.ts  index.ts  multi.ts  openai.ts
tests/: env_loader.test.ts  index.test.ts  v2_strategies.test.ts  v3_features.test.ts  v4_semantic.test.ts  v4_streaming.test.ts  v5_presets.test.ts
